--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx src/index.ts"
   },
   "keywords": [],
   "author": "Pedro Machado",
   "license": "ISC",
-  "description": "A simple album manager, for easier tracking of music albums of your favorite artists."
+  "description": "A simple album manager, for easier tracking of music albums of your favorite artists.",
+  "devDependencies": {
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.4",
+    "typescript": "^5.9.2"
+  }
 }
