--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "tsx src/index.ts"
+    "test": "tsx src/index.ts",
+    "test:watch": "tsx-watch src/index.ts",
+    "build": "tsup src",
+    "start": "npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "Pedro Machado",
